[build-system]
requires = [
    "wheel",
    # Check the updated version pinning requirements in:
    # https://github.com/pypa/setuptools_scm
    "setuptools",
    "setuptools_scm[toml]",
    "cmake_build_extension",
    "numpy",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/python/_version.py"
write_to_template = '__version__ = "{version}"'
